turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:21: error: type mismatch;
 found   : Int(0)
 required: java.awt.Color
				setCouleurBrosse(0)
                                                 ^